--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
       <div class="hero-center">
         <div class="hero-title" id="heroTitle">ELENA E ALESSIO</div>
-        <div class="hero-sub" id="heroSub">si sposano!</div>
+        <div class="hero-sub" id="heroSub">ci sposiamo!</div>
         <div class="hero-date" id="heroDate">30 MAGGIO 2026 • ORE 11:00</div>
 
         <div class="countdown" aria-label="Countdown">
@@ -113,6 +113,7 @@
             
             <h3 class="card-title">Il ricevimento</h3>
             <p class="card-text">
+              <span class="mono">Villa Nardella</span><br> 
               <span class="mono" id="receptionHuman">42°20'13.9"N 12°24'11.6"E</span><br>
               <span class="mono muted small" id="receptionDec">42.337194,12.403222</span>
             </p>
