Other fixes (kill me)

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             
             <h3 class="card-title">Il ricevimento</h3>
             <p class="card-text">
-              <span class="mono">Villa Nardella</span><br> 
+              <span class="card-text">Villa Nardella</span><br> 
               <span class="mono" id="receptionHuman">42°20'13.9"N 12°24'11.6"E</span><br>
               <span class="mono muted small" id="receptionDec">42.337194,12.403222</span>
             </p>
@@ -243,7 +243,7 @@ il vostro regalo:        </p>
             </div>
 
             <div class="form-row">
-              <label class="label" for="note">Messaggio (opzionale)</label>
+              <label class="label" for="note">Scrivi qui i nomi delle persone nel tuo gruppo e altri commenti (opzionale)</label>
               <textarea class="input textarea" id="note" name="messaggio" rows="4" placeholder="Scrivi qui…"></textarea>
             </div>
 
