--- a/index.html
+++ b/index.html
@@ -238,12 +238,12 @@ il vostro regalo:        </p>
             </div>
 
             <div class="form-row">
-              <label class="label" for="diet">Allergie / esigenze alimentari</label>
+              <label class="label" for="diet">Allergie / esigenze alimentari (specifica il nome della persona)</label>
               <input class="input" id="diet" name="esigenze_alimentari" type="text" placeholder="Es: vegetariano, glutine, ecc." />
             </div>
 
             <div class="form-row">
-              <label class="label" for="note">Scrivi qui i nomi delle persone nel tuo gruppo e altri commenti (opzionale)</label>
+              <label class="label" for="note">Scrivi qui i nomi delle persone nel tuo gruppo</label>
               <textarea class="input textarea" id="note" name="messaggio" rows="4" placeholder="Scrivi qui…"></textarea>
             </div>
 
